...
                                        <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repeat your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O30-gZ-I2w">
                                        <rect key="frame" x="0.0" y="212" width="373" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="repeatPasswordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eKQ-65-Wdy">
                                        <rect key="frame" x="0.0" y="265" width="373" height="34.333333333333314"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signupButton"/>
...
